argoapps/kube-prometheus-stack/manifests/alertmanager-ingressroute.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`alertmanager-k3s.local.lan`) 
    kind: Rule
    services:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
